# dubbyx

./: .gitignore
docs/: Design Doc.docx  DubbyX.md  Pitch Description.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: MediaRecording.tsx
translation-api/: main.py  pyproject.toml
