[tool.poetry]
name = "translator-strapon"
version = "0.1.0"
description = "The translator app for the translator strap-on for the Wearable Computing project"
authors = ["Anuran Roy <76481787+anuran-roy@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
requests = "^2.28.1"
daphne = "^3.0.2"
uvicorn = "^0.18.2"
indicnlp = "^0.0.1"
websockets = "^10.3"
python-multipart = "^0.0.5"
playsound = "^1.3.0"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
